Resolve(core): 얼럿이 모달 위에 뜨도록 z-index 수정

--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -91,6 +91,10 @@
   position: fixed;
 }
 
+.overlay--alert {
+  z-index: z("alert-overlay");
+}
+
 .overlay--dark {
   background-color: $overlay-01;
 }
